<resources>
    <string name="app_name">Tripify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tripify</string>
    <string name="nav_header_subtitle">I hope you will have a nice Trip!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_home">Welcome to Tripify! Here you can add your routes and see your places. Don\'t forget to check your weather!</string>

    <string name="menu_home">Home</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_places">Places</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_map">Map</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_register">Register</string>



    <string name="contactus_button_compose_email">Compose Email</string>
    <string name="contact_text">Here you can write us a message to improve your experience with our app.</string>
    <string name="share_text">Share your travel experience with your friends!</string>
    <string name="text_button_share">Share</string>
    <string name="button_home_text">Go to login page</string>
    <string name="enter_route_name">Enter Route Name</string>
    <string name="add_route">Add Route</string>
    <string name="log_out">Log out</string>
    <string name="you_are_currently_logged_in">You are currently logged in.</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_gmail">Sign in with Gmail</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="welcome_please_sign_in_to_access_your_routes">Welcome! Please sign in to access your routes.</string>
    <string name="places">Places</string>
    <string name="enjoy_your_places">Enjoy your places!</string>
    <string name="place_name">Place Name:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="change_language">Change language</string>
    <string name="view_weather">View Weather</string>
    <string name="add_place">Add Place</string>
    <string name="view_places">View Places</string>
    <string name="delete_route">Delete Route</string>
    <string name="view_route">View route</string>
</resources>