<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/nav_profile" />

    </fragment>


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.project1.ui.profile.ProfileFragment"
        android:label="@string/menu_profile">
        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_profile_to_register"
            app:destination="@id/nav_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.project1.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes_unconnected" >
        <action
            android:id="@+id/action_routes_to_places"
            app:destination="@id/nav_places" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.project1.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.project1.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/nav_profile" />
    </fragment>



    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.project1.ui.contactus.ContacusFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.project1.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.project1.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.example.project1.ui.places.PlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_view_places" />
</navigation>