<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- CardView to display the route name -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- TextView to display the route name -->
            <TextView
                android:id="@+id/text_route_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary_dark_color" />

            <!-- Button to view weather -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
                <Button
                    android:id="@+id/button_view_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_weather"
                    android:backgroundTint="@color/primary_dark_color"
                    android:textColor="@android:color/white"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/button_view_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_route"
                    android:backgroundTint="@color/primary_dark_color"
                    android:textColor="@android:color/white"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- Nested horizontal LinearLayout for buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- Button to add place -->
                <Button
                    android:id="@+id/button_add_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_place"
                    android:backgroundTint="@color/primary_green_color"
                    android:textColor="@android:color/white"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:textSize="12sp"
                    android:layout_weight="1" />

                <!-- Button to view places -->
                <Button
                    android:id="@+id/button_view_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_places"
                    android:backgroundTint="@color/primary_dark_color"
                    android:textColor="@android:color/white"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp" />

                <!-- Button to delete route -->
                <Button
                    android:id="@+id/button_delete_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_route"
                    android:backgroundTint="@color/black"
                    android:textColor="@android:color/white"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
